[package]
name = "ozmux_extension_host"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
ozmux_macros = { path = "../macros" }
ozmux_session = { path = "../session" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util"] }
tracing = { workspace = true }
thiserror = { workspace = true }
interprocess = { workspace = true }
uuid = { workspace = true }
