[package]
name = "ozmux_http_server"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ozmux_multiplexer = { path = "../multiplexer" }
ozmux_terminal = { path = "../terminal" }
ozmux_extension = { path = "../extension" }
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
mime_guess = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
ozmux_terminal = { path = "../terminal", features = ["test-helpers"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"
tempfile = { workspace = true }
