[package]
name = "ozmux_multiplexer"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ozmux_macros = { path = "../macros" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
thiserror = { workspace = true }
uuid = { workspace = true }
