[package]
name = "ozmux_multiplexer"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display"] }
ozmux_macros = { path = "../macros" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
