[package]
name = "ozmux_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ozmux"
path = "src/main.rs"

[dependencies]
ozmux_server = { path = "../ozmux_server/" }
tracing = { workspace = true }
clap = { version = "4.6.0", features = [ "derive" ] }
anyhow = { workspace = true }

[lints]
workspace = true
